comments and showmishaps.sh

--- a/TODO
+++ b/TODO
@@ -20,3 +20,7 @@
 * mehr sprachliche Vielfalt
 * Erläuterungen am Anfang der Kapitel
 * Rest fertigmachen, dann Datenstrukturen kürzen
+
+[Simulation]
+* reine Cu/Ni-Multilagen-Simulation anschieben und Rauheit vergleichen
+
