--- a/depositions.tex
+++ b/depositions.tex
@@ -12,7 +12,9 @@ Tabellen \ref{tab:deposition-comparison} und \ref{tab:deposition-materials} stel
     \includegraphics[width=\linewidth]{reactors-a}
   }\hfill
   \parbox[c]{.65\textwidth}{
-    \subcaption{Sputter-Kammer (PVD): Ein Elektronenstrahl (links) schlägt Atome aus dem Target (oben), die sich auf dem Substrat (unten) als dünne Schicht absetzen}
+    \subcaption{Sputter-Kammer (PVD):
+      Ein Elektronenstrahl (links) schlägt Atome aus dem Target (oben), die sich auf dem Substrat (unten) als dünne Schicht absetzen
+    }
     \label{fig:datastructures-a}
   }
 
@@ -22,7 +24,10 @@ Tabellen \ref{tab:deposition-comparison} und \ref{tab:deposition-materials} stel
     \includegraphics[width=\linewidth]{reactors-b}
   }\hfill
   \parbox[c]{.65\textwidth}{
-    \subcaption{Injektions-Kammer (CVD, ALD): Precursorgase strömen von oben über das Substrat, wo sie durch chemische Reaktionen dünne Schichten bilden. Nebenprodukte der Oberflächenreaktionen werden nach unten aus dem Reaktor gespült}
+    \subcaption{Injektions-Kammer (CVD, ALD):
+      Precursorgase strömen von oben über das Substrat, wo sie durch chemische Reaktionen dünne Schichten bilden.
+      Nebenprodukte der Oberflächenreaktionen werden nach unten aus dem Reaktor gespült
+    }
     \label{fig:datastructures-b}
   }
 
@@ -32,7 +37,10 @@ Tabellen \ref{tab:deposition-comparison} und \ref{tab:deposition-materials} stel
     \includegraphics[width=\linewidth]{reactors-c}
   }\hfill
   \parbox[c]{.65\textwidth}{
-    \subcaption{Batch-Reaktor (CVD, ALD): Gase strömen zwischen Stapeln von Substraten, auf deren Oberfläche durch chemische Reaktionen dünne Schichten abgeschieden werden. Nebenprodukte werden mit dem Gasstrom aus dem Reaktor gespült}
+    \subcaption{Batch-Reaktor (CVD, ALD):
+      Gase strömen zwischen Stapeln von Substraten, auf deren Oberfläche durch chemische Reaktionen dünne Schichten abgeschieden werden.
+      Nebenprodukte werden mit dem Gasstrom aus dem Reaktor gespült
+    }
     \label{fig:datastructures-c}
   }
 
@@ -67,7 +75,9 @@ Tabellen \ref{tab:deposition-comparison} und \ref{tab:deposition-materials} stel
     \textbf{CVD} &\cmark&?&\cmark&\cmark&\cmark&\cmark&?&?\\
     \textbf{ALD} &\cmark&?&\cmark&\cmark&\cmark&\cmark&\cmark&\cmark\\
   \end{tabularx}
-  \caption[Mögliche Produkte der Abscheidungsarten]{Mögliche Produkte der Abscheidungsarten. Weitergehende Informationen finden sich in der Literatur für PVD\todo[inline]{cite}, CVD\todo[inline]{cite} und ALD\cite{puurunen_surface_2005}.}
+  \caption[Mögliche Produkte der Abscheidungsarten]{Mögliche Produkte der Abscheidungsarten.
+    Weitergehende Informationen finden sich in der Literatur für PVD\todo[inline]{cite}, CVD\todo[inline]{cite} und ALD\cite{puurunen_surface_2005}.
+  }
   \todo[inline]{Referenzen für abgeschiedene Systeme}
   \label{tab:deposition-materials}
 \end{table}
