--- a/goldpvd.tex
+++ b/goldpvd.tex
@@ -169,11 +169,15 @@ In realen Systemen werden entstehende Überhänge und Hohlräume der untersuchte
   \hfill
   \begin{subfigure}[t]{\subfigwidth}
     \includegraphics[width=\textwidth]{gold_tiproughness}
-    \subcaption{Zeitverlauf der Rauheit von \SI{50}{\angstrom} breiten Spitzen variabler Steigung. Oberflächenrauheiten werden nicht verringert}
+    \subcaption{Zeitverlauf der Rauheit von \SI{50}{\angstrom} breiten Spitzen variabler Steigung.
+      Oberflächenrauheiten werden nicht verringert
+    }
     \label{fig:goldroughness-b}
   \end{subfigure}
 
-  \caption[Oberflächenrauheit von Gold]{Oberflächenrauheit von Gold. Im idealen Fall konvergiert die Rauheit gegen einen konstanten Wert von \SI{1.2}{\angstrom}}
+  \caption[Oberflächenrauheit von Gold]{Oberflächenrauheit von Gold.
+    Im idealen Fall konvergiert die Rauheit gegen einen konstanten Wert von \SI{1.2}{\angstrom}
+  }
   \label{fig:goldroughness}
 
 \end{figure}
