--- a/siliconpvd.tex
+++ b/siliconpvd.tex
@@ -41,7 +41,9 @@ Sind neben den Bulks auch die die Precursormoleküle und Oberflächen sowie dere
 Die Ergebnisse dieser Betrachtungen wurden in Tabelle \ref{tab:siliconpreresults} zusammen gefasst und für ausgewählte Systeme in Tabelle \ref{tab:silicondetailedresults} näher analysiert.
 
 \begin{table}[h]
-  \caption[Ergebnisse der Silizium-Potential-Untersuchungen]{Zusammenfassung Ergebnisse der Untersuchung der Potenialuntersuchung für Silizium-Systeme. Detailliertere Ergebnisse finden sich im \todo[inline]{Anhang}}
+  \caption[Ergebnisse der Silizium-Potential-Untersuchungen]{Zusammenfassung Ergebnisse der Untersuchung der Potenialuntersuchung für Silizium-Systeme.
+    Detailliertere Ergebnisse finden sich im \todo[inline]{Anhang}
+  }
   \label{tab:siliconpreresults}
   \rowcolors{0}{white}{lightgray}
   \begin{tabularx}{\textwidth}{|lCCCCCCCC|}
