showmishaps.sh and stuff

--- a/datastructures.tex
+++ b/datastructures.tex
@@ -197,7 +197,8 @@ Während der Entwicklung und Implementierung des Parsivald-Modelles wurden Algor
     \hline
   \end{tabularx}
 \end{table}
-\footnotetext{Ein $k$-Simplex ist ein Objekt in $k$ Dimensionen mit $k+1$ Eckpunkten, die untereinander mit geraden Kanten verbunden sind. Somit ist ein 1-Simplex eine Linie, ein 2-Simplex ein Dreieck, ein 3-Simplex ein Tetraeder, usw.}
+\footnotetext{Ein $k$-Simplex ist ein Objekt in $k$ Dimensionen mit $k+1$ Eckpunkten, die untereinander mit geraden Kanten verbunden sind.
+  Somit ist ein 1-Simplex eine Linie, ein 2-Simplex ein Dreieck, ein 3-Simplex ein Tetraeder, usw.}
 
 \subsection{Effiziente Datenstrukturen}
 
