--- a/multilayer.tex
+++ b/multilayer.tex
@@ -5,7 +5,7 @@ Der PVD-Modus von Parsivald ist durch seine zyklische Arbeitsweise auch für Mul
 
 \subsection{Vorbetrachtung}
 Die Wahl fiel auf Kupfer-Nickel-Systeme aufgrund der ähnlichen Atom- und Gittereigenschaften sowie die Verfügbarkeit eines kompatiblen \todo{cite lammps?}Potentiales.
-Diese Systeme können per \todo{cite}Elektro\-deposition oder durch \todo{cite}Sputtern hergestellt werden, wobei üblicherweise Lagendicken von \todo{cite!}\SI{5}{\angstrom} bis \todo{cite. angstrom oder nm?}\SI{200}{\angstrom} produziert werden.
+Diese Systeme können per \todo{cite}Elektro\-deposition oder durch \todo{cite}Sputtern hergestellt werden, wobei üblicherweise Lagendicken von \todo{cite!}\SI{5}{\angstrom} bis \todo{cite! angstrom oder nm?}\SI{200}{\angstrom} produziert werden.
 \todo{wirklich?}Durch Beschränkungen in der verfügbaren Rechenzeit beschränken sich die vorgestellten Simulationen auf Lagendicken unterhalb von \SI{10}{\angstrom}, allerdings sind größere Systeme technisch möglich.
 
 An Multilagensystemen lassen sich strukturell neben den Dicken der einzelnen Lagen die Rauheiten aufeinanderfolgender Schichten besonders gut untersuchen.
@@ -39,4 +39,4 @@ Bei größeren Systemen sind durch Verspannungen im Material Gitterversetzungen 
   \label{fig:multilayerresults}
 \end{figure}
 
-\todo[inline]{update with the results of 93\_*/23..28}
+\todo[inline]{update with the results of 93\_*/23-28}
