--- a/einleitung.tex
+++ b/einleitung.tex
@@ -2,7 +2,7 @@
 \chapter{Einleitung}
 \label{cha:einleitung}
 
-\todo[inline]{Moore's Law? ... naja...}
+\todo[inline]{Moore's Law? naja}
 \todo[inline]{MOSFET-Dielektrika}
 \todo[inline]{Passivation Layers}
 \todo[inline]{Diffusionsbarrieren}
