--- a/results.tex
+++ b/results.tex
@@ -17,3 +17,5 @@ Silizium-PVD stellt abschließend Probleme mit amorphen Materialien in Abschnitt
 \input{multilayer}
 \clearpage
 \input{siliconpvd}
+\clearpage
+\input{aluminaald}
